# RAG_langchain_markdown

./: README.md  check_data.py  create_database.py  list_models.py  main.py  myembedder.py  pyproject.toml  query_data.py  requirements.txt  test.py
chroma/: chroma.sqlite3
data/: ThachSanh_LyThong.md
